--- a/Main.HTML
+++ b/Main.HTML
@@ -10,7 +10,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Lora:wght@400;700&display=swap" rel="stylesheet"> 
     <style>
         body {
-            font-family: 'Lora', serif;
+            font-family: 'Lora', serif; 
             margin: 0;
             padding: 0;
             color: #333;
@@ -29,7 +29,7 @@
         }
 
         h1 {
-            font-family: 'Playfair Display', serif;
+            font-family: 'Playfair Display', serif; 
             font-size: 3rem;
             font-weight: 700;
             margin-bottom: 10px;
@@ -45,6 +45,11 @@
             font-size: 2rem;
             font-weight: 700;
             margin-bottom: 20px;
+        }
+
+        .highlights ul {
+            list-style: disc;
+            margin-left: 20px;
         }
 
         .grid {
@@ -67,12 +72,12 @@
         }
 
         .rooms .room img {
-            width: 40%;
+            width: 40%; 
             margin-right: 20px;
         }
 
         .rooms .room .room-details {
-            width: 60%;
+            width: 60%; 
         }
 
         .contact {
@@ -81,7 +86,7 @@
 
         .button {
             display: inline-block;
-            background-color: #333;
+            background-color: #333; 
             color: white;
             padding: 10px 20px;
             text-decoration: none;
@@ -92,18 +97,18 @@
         }
 
         .button:hover {
-            background-color: #555;
+            background-color: #555; 
         }
 
         .text-center {
             text-align: center;
         }
 
-        .hero {
+        .hero { 
             background-size: cover;
             background-position: center;
             color: white;
-            padding: 100px 0;
+            padding: 100px 0; 
             text-align: center;
         }
 
@@ -111,7 +116,7 @@
             position: relative;
             width: 100%;
             height: 0;
-            padding-bottom: 56.25%;
+            padding-bottom: 56.25%; 
             overflow: hidden;
             margin-top: 20px;
         }
@@ -122,6 +127,26 @@
             left: 0;
             width: 100%;
             height: 100%;
+        }
+
+        /* Add styles for your contact form as needed */
+        .contact-form input[type="text"],
+        .contact-form input[type="email"],
+        .contact-form textarea {
+            width: 100%;
+            padding: 10px;
+            margin-bottom: 10px;
+            border: 1px solid #ccc;
+            border-radius: 5px;
+        }
+
+        .contact-form button[type="submit"] {
+            background-color: #007bff;
+            color: white;
+            padding: 10px 20px;
+            border: none;
+            border-radius: 5px;
+            cursor: pointer;
         }
 
         /* Table styling for a posh look */
@@ -135,11 +160,11 @@
         th, td {
             padding: 15px;
             text-align: left;
-            border-bottom: 1px solid #eee;
+            border-bottom: 1px solid #eee; /* Light gray border */
         }
 
         th {
-            background-color: #f5f5f5;
+            background-color: #f5f5f5; /* Light background for headers */
             font-weight: bold;
         }
 
@@ -157,7 +182,7 @@
             <div class="hero" style="background-image: url('https://raw.githubusercontent.com/varunleaf/Nithilagam.github.io/main/public/images/image_1.jpg');"> 
                 <h1>Nithilagam Homestays</h1>
                 <p>Indulge in the serenity and refined comfort of Nithilagam Homestays, a haven of tranquility nestled amidst the breathtaking landscapes of India. Our exclusive retreat offers discerning travelers an unforgettable escape, where personalized service and exquisite accommodations create an experience of unparalleled luxury.</p>
-                <a class="button" href="#">Explore Our Sanctuary</a>
+                <a class="button" href="https://www.booking.com/hotel/in/nithilagam-homestays.en-gb.html?aid=357026&label=gog235jc-1DCAsobEIUbml0aGlsYWdhbS1ob21lc3RheXNIM1gDaGyIAQGYAQm4ARnIAQ_YAQPoAQGIAgGoAgO4AqfqhbYGwAIB0gIkZDJmYTVmNjctZGY1Yy00YjEwLWI0NjAtMzQzZTcxMTgxNjA32AIE4AIB&sid=2b9bf51e8a11157ed5a7e0fc1ea6964b&dist=0&keep_landing=1&sb_price_type=total&type=total&">Explore Our Sanctuary</a>
             </div>
         </header>
 
@@ -190,60 +215,54 @@
                         <li>Luxurious en-suite bathroom</li>
                         <li>Complimentary Wi-Fi</li>
                     </ul>
-                    <a href="#" class="button">View Details</a>
+                    <a href="https://www.booking.com/hotel/in/nithilagam-homestays.en-gb.html?aid=357026&label=gog235jc-1DCAsobEIUbml0aGlsYWdhbS1ob21lc3RheXNIM1gDaGyIAQGYAQm4ARnIAQ_YAQPoAQGIAgGoAgO4AqfqhbYGwAIB0gIkZDJmYTVmNjctZGY1Yy00YjEwLWI0NjAtMzQzZTcxMTgxNjA32AIE4AIB&sid=2b9bf51e8a11157ed5a7e0fc1ea6964b&dist=0&keep_landing=1&sb_price_type=total&type=total&" class="button">View Details</a>
                 </div>
             </div>
             <div class="room">
-                <img src="https://raw.githubusercontent.com/varunleaf/Nithilagam.github.io/main/public/images/image_5.jpg" alt="Family Room">
+                <img src="https://raw.githubusercontent.com/varunleaf/Nithilagam.github.io/main/public/images/image_5.jpg" alt="Superior Double Room">
                 <div class="room-details">
-                    <h3>Family Room with Garden View</h3>
-                    <p>Create lasting memories with your loved ones in our spacious Family Room, offering breathtaking views of the surrounding gardens. Thoughtfully designed for comfort and relaxation, this haven provides ample space for everyone to unwind.</p>
+                    <h3>Superior Double Room with Garden View</h3>
+                    <p>Experience unparalleled luxury in our Superior Double Room, featuring exquisite design and captivating garden views. Perfect for couples seeking a romantic getaway.</p>
                     <ul>
-                        <li>Expansive 30 m² room</li>
-                        <li>Two plush queen-size beds</li>
-                        <li>Panoramic garden views</li>
-                        <li>Elegant en-suite bathroom</li>
+                        <li>Elegant 25 m² room</li>
+                        <li>Luxurious king-size bed</li>
+                        <li>Stunning garden views</li>
+                        <li>Spacious en-suite bathroom</li>
                         <li>Complimentary Wi-Fi</li>
                     </ul>
-                    <a href="#" class="button">View Details</a>
+                    <a href="https://www.booking.com/hotel/in/nithilagam-homestays.en-gb.html?aid=357026&label=gog235jc-1DCAsobEIUbml0aGlsYWdhbS1ob21lc3RheXNIM1gDaGyIAQGYAQm4ARnIAQ_YAQPoAQGIAgGoAgO4AqfqhbYGwAIB0gIkZDJmYTVmNjctZGY1Yy00YjEwLWI0NjAtMzQzZTcxMTgxNjA32AIE4AIB&sid=2b9bf51e8a11157ed5a7e0fc1ea6964b&dist=0&keep_landing=1&sb_price_type=total&type=total&" class="button">View Details</a>
                 </div>
             </div>
-        </section>        
+        </section>
 
-        <table> 
+        <table>
             <caption>House Rules</caption>
             <tr>
                 <th>Check-in</th>
-                <td>From 14:00 to 18:00</td>
+                <td>From 14:00</td>
             </tr>
             <tr>
                 <th>Check-out</th>
-                <td>From 08:00 to 11:00</td>
+                <td>Until 11:00</td>
             </tr>
             <tr>
-                <th>Cancellation/ prepayment</th>
-                <td>Cancellation and prepayment policies vary according to accommodation type. Please enter the dates of your stay and check the conditions of your required option.</td>
+                <th>Cancellation/Prepayment</th>
+                <td>Cancellation and prepayment policies vary according to accommodation type. Please enter the dates of your stay and check the conditions of your required room.</td>
             </tr>
             <tr>
                 <th>Children and beds</th>
-                <td>
-                    <ul>
-                        <li>Children of any age are welcome.</li>
-                        <li>Children 13 years and above will be charged as adults at this property.</li>
-                        <li>To see correct prices and occupancy information, please add the number of children in your group and their ages to your search.</li>
-                        <li>Cots and extra beds are not available at this property.</li>
-                    </ul>
-                </td>
+                <td>Children of any age are welcome. Cots and extra beds are available upon request.</td>
             </tr>
             <tr>
-                <th>No age restriction</th>
-                <td>There is no age requirement for check-in</td>
+                <th>Age restriction</th>
+                <td>There is no age requirement for check-in.</td>
             </tr>
             <tr>
                 <th>Pets</th>
                 <td>Pets are not allowed.</td>
             </tr>
             <tr>
+                <th>Smoking</th>
                 <td>Smoking is not allowed.</td>
             </tr>
             <tr>
@@ -259,7 +278,7 @@
         <div class="contact text-center">
             <h2>Book Your Stay</h2>
             <p>Ready to experience the tranquility and luxury of Nithilagam Homestays? Click the button below to book your stay.</p>
-            <a class="button" href="your-booking-link-here">Book Now</a>
+            <a class="button" href="https://www.booking.com/hotel/in/nithilagam-homestays.en-gb.html?aid=357026&label=gog235jc-1DCAsobEIUbml0aGlsYWdhbS1ob21lc3RheXNIM1gDaGyIAQGYAQm4ARnIAQ_YAQPoAQGIAgGoAgO4AqfqhbYGwAIB0gIkZDJmYTVmNjctZGY1Yy00YjEwLWI0NjAtMzQzZTcxMTgxNjA32AIE4AIB&sid=2b9bf51e8a11157ed5a7e0fc1ea6964b&dist=0&keep_landing=1&sb_price_type=total&type=total&">Book Now</a>
         </div>
 
         <div class="map-container">
