--- a/Main.HTML
+++ b/Main.HTML
@@ -202,13 +202,64 @@
 </head>
 <body>
     <div class="container">
-        <!-- Existing Sections... -->
+        <header>
+            <div class="hero" style="background-image: url('https://raw.githubusercontent.com/varunleaf/Nithilagam.github.io/main/public/images/image_1.jpg');"> 
+                <h1>Nithilagam Homestays</h1>
+                <p>Indulge in the serenity and refined comfort of Nithilagam Homestays, a haven of tranquility nestled amidst the breathtaking landscapes of India. Our exclusive retreat offers discerning travelers an unforgettable escape, where personalized service and exquisite accommodations create an experience of unparalleled luxury.</p>
+                <a class="button" href="https://www.booking.com/hotel/in/nithilagam-homestays.en-gb.html">Explore Our Sanctuary</a>
+            </div>
+        </header>
 
-        <!-- New Section for "Budget Stay with Indian Toilet and Double Cot" -->
+        <section class="highlights">
+            <h2>Property Highlights</h2>
+            <ul>
+                <li><strong>Free WiFi:</strong> Stay connected with our high-speed internet.</li>
+                <li><strong>Family Rooms:</strong> Spacious accommodations perfect for families.</li>
+                <li><strong>Free Parking:</strong> Convenient parking for all guests.</li>
+                <li><strong>Non-Smoking Rooms:</strong> Enjoy a clean, smoke-free environment.</li>
+            </ul>
+            <div class="grid">
+                <img src="https://raw.githubusercontent.com/varunleaf/Nithilagam.github.io/main/public/images/image_1.jpg" alt="Beautiful exterior view of Nithilagam Homestays" loading="lazy">
+                <img src="https://raw.githubusercontent.com/varunleaf/Nithilagam.github.io/main/public/images/image_2.jpg" alt="Luxurious interior of the homestay" loading="lazy">
+                <img src="https://raw.githubusercontent.com/varunleaf/Nithilagam.github.io/main/public/images/image_3.jpg" alt="Serene garden area at Nithilagam Homestays" loading="lazy">
+            </div>
+        </section>
+
         <section class="rooms">
-            <h2>Budget Stay</h2>
+            <h2>Exquisite Accommodations</h2>
             <div class="room">
-                <img src="https://github.com/varunleaf/Nithilagam.github.io/blob/main/public/images/image_7.jpg" alt="Budget Stay with Indian Toilet and Double Cot" loading="lazy">
+                <img src="https://raw.githubusercontent.com/varunleaf/Nithilagam.github.io/main/public/images/image_4.jpg" alt="Deluxe Double Room with Balcony" loading="lazy">
+                <div class="room-details">
+                    <h3>Deluxe Double Room with Balcony</h3>
+                    <p>Retreat to the comfort of our Deluxe Double Room, featuring a private balcony overlooking lush gardens. Impeccably designed with plush furnishings and modern amenities, this sanctuary offers a serene escape.</p>
+                    <ul>
+                        <li>Spacious 20 m² room</li>
+                        <li>Plush king-size bed</li>
+                        <li>Private balcony with garden views</li>
+                        <li>Luxurious en-suite bathroom</li>
+                        <li>Complimentary Wi-Fi</li>
+                    </ul>
+                    <a href="https://www.booking.com/hotel/in/nithilagam-homestays.en-gb.html" class="button">View Details</a>
+                </div>
+            </div>
+            <div class="room">
+                <img src="https://raw.githubusercontent.com/varunleaf/Nithilagam.github.io/main/public/images/image_5.jpg" alt="Superior Double Room with Garden View" loading="lazy">
+                <div class="room-details">
+                    <h3>Superior Double Room with Garden View</h3>
+                    <p>Experience unparalleled luxury in our Superior Double Room, featuring exquisite design and captivating garden views. Perfect for couples seeking a romantic getaway.</p>
+                    <ul>
+                        <li>Elegant 25 m² room</li>
+                        <li>Luxurious king-size bed</li>
+                        <li>Stunning garden views</li>
+                        <li>Spacious en-suite bathroom</li>
+                        <li>Complimentary Wi-Fi</li>
+                    </ul>
+                    <a href="https://www.booking.com/hotel/in/nithilagam-homestays.en-gb.html" class="button">View Details</a>
+                </div>
+            </div>
+            <!-- New Section for Budget Stay -->
+            <div class="room">
+                <img src="https://raw.githubusercontent.com/varunleaf/Nithilagam.github.io/main/public/images/image_7.jpg" alt="Budget Stay with Indian Toilet and Double Cot" loading="lazy">
                 <div class="room-details">
                     <h3>Budget Stay with Indian Toilet and Double Cot</h3>
                     <p>Experience a comfortable and affordable stay in our Budget Room. Equipped with a traditional Indian toilet and a cozy double cot, this option is perfect for travelers looking for basic, clean, and comfortable accommodations.</p>
@@ -218,12 +269,62 @@
                         <li>Traditional Indian toilet</li>
                         <li>Complimentary Wi-Fi</li>
                     </ul>
-                    <a href="https://www.booking.com/hotel/in/nithilagam-homestays.en-gb.html?aid=357026&label=gog235jc-1DCAsobEIUbml0aGlsYWdhbS1ob21lc3RheXNIM1gDaGyIAQGYAQm4ARnIAQ_YAQPoAQGIAgGoAgO4AqfqhbYGwAIB0gIkZDJmYTVmNjctZGY1Yy00YjEwLWI0NjAtMzQzZTcxMTgxNjA32AIE4AIB&sid=2b9bf51e8a11157ed5a7e0fc1ea6964b&dist=0&keep_landing=1&sb_price_type=total&type=total&" class="button">View Details</a>
+                    <a href="https://www.booking.com/hotel/in/nithilagam-homestays.en-gb.html" class="button">View Details</a>
                 </div>
             </div>
         </section>
 
-        <!-- Map and Contact Sections -->
+        <table>
+            <caption>House Rules</caption>
+            <tr>
+                <th>Check-in</th>
+                <td>From 14:00</td>
+            </tr>
+            <tr>
+                <th>Check-out</th>
+                <td>Until 11:00</td>
+            </tr>
+            <tr>
+                <th>Cancellation/Prepayment</th>
+                <td>Cancellation and prepayment policies vary according to accommodation type. Please enter the dates of your stay and check the conditions of your required room.</td>
+            </tr>
+            <tr>
+                <th>Children and beds</th>
+                <td>Children of any age are welcome. Cots and extra beds are available upon request.</td>
+            </tr>
+            <tr>
+                <th>Age restriction</th>
+                <td>There is no age requirement for check-in.</td>
+            </tr>
+            <tr>
+                <th>Pets</th>
+                <td>Pets are not allowed.</td>
+            </tr>
+            <tr>
+                <th>Smoking</th>
+                <td>Smoking is not allowed.</td>
+            </tr>
+            <tr>
+                <th>Parties</th>
+                <td>Parties/events are not allowed.</td>
+            </tr>
+            <tr>
+                <th>Quiet hours</th>
+                <td>Guests must be quiet between 23:00 and 07:00.</td>
+            </tr>
+        </table>
+
+        <div class="contact text-center">
+            <h2>Book Your Stay</h2>
+            <p>Ready to experience the tranquility and luxury of Nithilagam Homestays? Click the button below to book your stay.</p>
+            <a class="button" href="https://www.booking.com/hotel/in/nithilagam-homestays.en-gb.html">Book Now</a>
+        </div>
+
+        <div class="map-container">
+            <h2 class="text-center">Our Location</h2>
+            <iframe src="https://www.google.com/maps?q=63MC+QW+Tiruvannamalai,+Tamil+Nadu&output=embed" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+        </div>
+
     </div>
 </body>
 </html>
